# pandora

./: .gitignore  .pre-commit-config.yaml  .replit  .swp  LICENSE  README.md  pyproject.toml  pyrightconfig.json
scripts/: package.sh
src/pandora/: __init__.py  __main__.py  common.py  errors.py  launch.py  utils.py
src/pandora/offline/: __init__.py  env.py
src/pandora/online/: __init__.py  ide.py
src/pandora_cli/: __init__.py  __main__.py
src/pandora_cli/env/: __init__.py
src/pandora_cli/ide/: __init__.py
tests/: test_env.py  test_ide.py
