[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pandora"
version = "0.1.0"
description = "Cross-platform out-of-box development for offline/online operations."
authors = ["Samson Ayeni"]
readme = "README.md"
license = "LICENSE"
packages = [{ include = "pandora", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
distro = "^1.9"
pyinstaller = "^6.15.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
poethepoet = "^0.32.0"

[tool.poetry.scripts]
pandora = "pandora.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]