[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pandora"
version = "0.1.0"
description = "Cross-platform out-of-box development for offline/online operations."
authors = ["Samson Ayeni"]
readme = "README.md"
license = "LICENSE"
packages = [
    { include = "pandora", from = "src" },
    { include = "pandora_cli", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
distro = "^1.9"
pyinstaller = "^6.15.0"
typer = "^0.12.5"
rich = "^13.7.1"
questionary = "^2.0.1"
click = ">=8.1,<8.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
poethepoet = "^0.32.0"

[tool.poetry.scripts]
pandora = "pandora_cli.__main__:app"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
